# vgxserver

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md  addlicense.py  build-unix.sh  build-win64.cmd  index.html  pyproject.toml  setup.py  temp_build_notes.txt  todo-README.md  twine_upload.sh
cxlib/: CMakeLists.txt
cxlib/src/: cxaptr.c  cxexcept.c  cxfileio.c  cxid.c  cxlib.c  cxlock.c  cxmath.c  cxmem.c  cxplat.c  cxsock.c  md5.c  sha256.c
cxlib/src/include/: _versioninfo.h  cxaptr.h  cxexcept.h  cxfileio.h  cxid.h  cxlib.h  cxlock.h  cxmath.h  cxmem.h  cxobjbase.h  cxplat.h  cxsock.h  md5.h  sha256.h  versiongen.h
pyvgx/: CMakeLists.txt  VGXCoreConcepts.html  build.html  limits.html  reference.html  shortref.html  tutorial.html
pyvgx/common/: _backtotop.html  _copyable.html
pyvgx/constants/: arcDirectionConstants.html  arcModifierConstants.html  collectConstants.html  constants.html  opcodeConstants.html  resultFieldConstants.html  resultListEntryConstants.html  sortSpecificationConstants.html  timestampConstants.html  valueConditionConstants.html
pyvgx/evaluator/: evaluator.html  selectEvaluator.html
pyvgx/exceptions/: exceptions.html
pyvgx/graph/: graph.html  graphArc.html  graphEnum.html  graphEvent.html  graphManagement.html  graphMembers.html  graphMiscellaneous.html  graphQuery.html  graphVertex.html
pyvgx/io/: vgxopxfer.html
pyvgx/resources/cf/sample/: vgx.cf
pyvgx/resources/plugins/py/: ADMIN_Attach.py  ADMIN_Bind.py  ADMIN_CancelSync.py  ADMIN_ClearReadonly.py  ADMIN_Console.py  ADMIN_Detach.py  ADMIN_DetachAll.py  ADMIN_GetAuthToken.py  ADMIN_Persist.py  ADMIN_ReloadPlugins.py  ADMIN_ResetMetrics.py  ADMIN_RestartHTTP.py  ADMIN_ResumeEvents.py  ADMIN_ResumeTxInput.py  ADMIN_ResumeTxOutput.py  ADMIN_ServiceIn.py  ADMIN_ServiceOut.py  ADMIN_SetReadonly.py  ADMIN_Shutdown.py  ADMIN_Subscribe.py  ADMIN_SuspendEvents.py  ADMIN_SuspendTxInput.py  ADMIN_SuspendTxOutput.py  ADMIN_Sync.py  ADMIN_SystemDescriptor.py  ADMIN_Throttle.py  ADMIN_Truncate.py  ADMIN_Unbind.py  ADMIN_Unsubscribe.py  ADMIN_UpdateSubscribers.py  BUILTIN_arcs.py  BUILTIN_connect.py  BUILTIN_createvertex.py  BUILTIN_deletevertex.py  BUILTIN_disconnect.py  BUILTIN_echo.py  BUILTIN_evaluate.py  BUILTIN_eventbacklog.py  BUILTIN_graphinfo.py  BUILTIN_init.py  (+17 more)
pyvgx/resources/plugins/tools/: convert.cmd  convert.py  raw2files.py
pyvgx/service/: multinode.html  pluginadapter.html  service.html  sysadmin.html
pyvgx/similarity/: similarity.html  similarityMembers.html  similarityMethods.html  vector.html
pyvgx/specification/: arcSpecificationSyntax.html  timeout.html
pyvgx/src/: ipyvgx_builder.c  ipyvgx_codec.c  ipyvgx_parser.c  ipyvgx_search_result.c  pyvgx.c  pyvgx_evalmem.c  pyvgx_framehash.c  pyvgx_graph.c  pyvgx_op.c  pyvgx_persist.c  pyvgx_plugin.c  pyvgx_query.c  pyvgx_sim.c  pyvgx_stringqueue.c  pyvgx_system.c  pyvgx_vector.c  pyvgx_vertex.c  pyvgx_xvgxpartial.c
pyvgx/src/include/: _pyvgx_plugin_builtins.h  _versioninfo.h  pyvgx.h
pyvgx/src/py/: __init__.py  vgxadmin  vgxadmin.cmd  vgxadmin.py  vgxdemoplugin.py  vgxdemoservice  vgxdemoservice.cmd  vgxdemoservice.py  vgxinstance  vgxinstance.cmd  vgxinstance.py
pyvgx/src/query/: pyvgx_Adjacent.c  pyvgx_Aggregate.c  pyvgx_ArcValue.c  pyvgx_Degree.c  pyvgx_Global.c  pyvgx_OpenNeighbor.c  pyvgx_neighborhood.c
pyvgx/test/: __init__.py  test_pyvgx.py  timing.db
pyvgx/test/pytest/: pytest.py  threads.py
pyvgx/test/pyvgxtest/: __init__.py  pyvgxtest.py  threads.py
pyvgx/test/test_pyvgx_Graph/: __init__.py
pyvgx/test/test_pyvgx_Graph/Arc/: Accumulate.py  Connect.py  Core.py  Count.py  Disconnect.py  __init__.py
pyvgx/test/test_pyvgx_Graph/Debugging/: DebugCheckAllocators.py  DebugFindObjectByIdentifier.py  DebugGetObjectByAddress.py  DebugPrintAllocators.py  ShowVertex.py  __init__.py  (+1 more)
pyvgx/test/test_pyvgx_HTTPServer/: __init__.py  _http_support.py
pyvgx/test/test_pyvgx_Similarity/: __init__.py
pyvgx/test/test_pyvgx_Vector/: __init__.py
pyvgx/test/test_pyvgx_Vertex/: DELETEME_Vertex.py  __init__.py
pyvgx/test/test_pyvgx_foundation/: __init__.py
pyvgx/test/test_pyvgx_module/: __init__.py
pyvgx/tools/: addlicense.py  apply_backlog.py  avalanchetest.py  putload.py  threads.py  uniformity.py
pyvgx/vertex/: vertex.html  vertexAccess.html  vertexFilter.html  vertexMembers.html  vertexMiscellaneous.html  vertexProperty.html  vertexRank.html  vertexTTL.html  vertexVector.html
vgx/: CMakeLists.txt
vgx/src/: runvgxtest.c  vgxtest.c  vxdefs.c  vxinit.c
vgx/src/allocator/: basementallocator.c  cxmalloc_allocator.c  cxmalloc_api.c  cxmalloc_block.c  cxmalloc_chain.c  cxmalloc_class.c  cxmalloc_family.c  cxmalloc_line.c  cxmalloc_object_processor.c  cxmalloc_serialization.c  cxmalloc_shape.c  default_cxmalloc.c  dynamic.c  frameallocator.c  memory.c  vxalloc.c  vxoballoc_cstring.c  vxoballoc_graph.c  vxoballoc_vector.c  vxoballoc_vertex.c
vgx/src/comlib/: comlib.c  comlibtest.c  cxcstring.c  cxlog.c  cxthread.c  cxtokenizer.c  debug.c  demo_class.c  linearsequence.c  messages.c  objectmodel.c  utest.c
vgx/src/include/: __vxtest_macro.h  _comlib.h  _cxmalloc.h  _fcell.h  _fhbase.h  _fmacro.h  _framehash.h  _simple.h  _versioninfo.h  _vgx.h  _vgx_serialization.h  _vxalloc.h  _vxarcvector.h  _vxcollector.h  _vxenum.h  _vxeval.h  _vxevent.h  _vxgraph.h  _vxoballoc_cstring.h  _vxoballoc_graph.h  _vxoballoc_vector.h  _vxoballoc_vertex.h  _vxoperation.h  _vxpathdef.h  _vxprivate.h  _vxserver.h  _vxserver_dispatcher.h  _vxsim.h  _vxtest.h  _vxtraverse.h  basementallocator.h  classdefs.h  comlib.h  cxcstring.h  cxlog.h  cxmalloc.h  cxthread.h  cxtokenizer.h  debug.h  default_allocator.h  (+16 more)
vgx/src/io/: vxio_uri.c
vgx/src/server/: vgx_server_artifacts.c  vgx_server_buffers.c  vgx_server_client.c  vgx_server_config.c  vgx_server_counters.c  vgx_server_dispatch.c  vgx_server_endpoint.c  vgx_server_executor.c  vgx_server_io.c  vgx_server_parser.c  vgx_server_plugin.c  vgx_server_request.c  vgx_server_resource.c  vgx_server_response.c  vgx_server_service.c  vgx_server_sync.c  vgx_server_util.c
(+611 files in other folders)
